--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- Complete -->
         <div class="complete" id="complete" hidden>
             <h1 class="complete-title">Countdown COMPLETE !!!</h1>
-            <h1 id="complete-info">Countdown finished on 05-05-2023...</h1>
+            <h1 id="complete-info"></h1>
             <button id="complete-button">New Countdown</button>
         </div>
     </div>
